# tawc

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  firefox.md  gradle.properties  gralloc-problem.md  gtk-gles.md  libhybris-base.md  notes.md  plan.md  settings.gradle.kts  shm.md
ahb-test-client/: Cargo.toml
app/: build.gradle.kts  proguard-rules.pro
chroot-scripts/: arch-chroot-create  arch-chroot-run  build-libhybris-lindroid  fix-android-headers  libhybris-tawc.patch  test-ahb-alloc.c  test-ahb-gpu-client.c  test-libs.c
client/: arch-chroot-create  arch-chroot-run  build-libhybris  build-libhybris-aarch64  build-libhybris-chroot.sh  build-libhybris-lindroid  build-proot  build-xwayland-aarch64  libgl-shim.c  libglesv2-shim.c  start-emulator  tawc-chroot-run  tawc-install-id.sh
compositor/: Cargo.toml
compositor/native/: wlegl_import.c
compositor/protocols/: tawc_gfxstream.xml
compositor/src/: ahb_export.rs  clipboard.rs  compositor.rs  event_loop.rs  gfxstream_present.rs  gl_import.rs  gtk3_menus_workaround.rs  host.rs  keymap.rs  launcher.rs  lib.rs  render.rs  scale.rs  text_input.rs  wlegl.rs  xwayland.rs
gtk-crash/: README.md
issues/: android-display-size-service-deprecated-api.md  base-devel-installed-in-prod.md  broker-stdin-file-redirect-empty.md  build-libhybris-swallows-install-errors.md  buildlibhybris-no-incremental-build-tracking.md  cache-proxy-abandoned-fills-block-installs.md  cache-proxy-stale-pacman-db.md  chroot-runs-everything-as-root.md  chroot-tar-extract-no-traversal-defense.md  compositor-exit-sigkills-terminal-sessions.md  compositor-stop-leaks-state-via-smithay-xwm-handles.md  emulator-rootless-no-network-via-run-as.md  fake-bwrap-disables-sandboxing-test-side.md  firefox-autoconfig-only-applied-via-test-deps.md  firefox-sandbox-env-vars-in-universal-proot-profile.md  firefox-startup-crash-dialog.md  firefox-test-flaky-on-cold-rootfs.md  gfxstream-wsi-swapchain-alloc-blocker.md  global-state-query-sender-leak-on-restart.md  gtk-libhybris-tls-crash.md  gtk4-cairo-renderer-broken.md  hardcoded-app-data-paths.md  hardware-backspace-stuck-down.md  initial-configure-size-test-coverage.md  input-test-flaky-on-emulator.md  input-tests-skip-ic-and-race-system-ime.md  kotlin-ui-polish-lint-cleanup.md  kumquat-listener-thread-leaks-per-compositor-start.md  lazy-init-compositor.md  lazy-init-kumquat.md  libhybris-ahb-release-silent-unknown-handle.md  libhybris-tls-finalise.md  libhybris-tls-slots-fixed-16.md  libhybris-wayland-finishswap-pending-framecallback.md  (+49 more)
server/compositor/: Cargo.toml  build.rs
server/compositor/native/: wlegl_import.c
server/compositor/src/: background.rs  compositor.rs  event_loop.rs  gl_import.rs  input.rs  lib.rs  protocol.rs  render.rs  text_input.rs  wlegl.rs  xwayland.rs
smithay-android/: Cargo.toml  build.rs
smithay-android/src/: ahb.rs  egl_android.rs  gl_import.rs  lib.rs
testing/integration/: Cargo.toml
testing/integration/src/: adb.rs  chroot.rs  chroot_process.rs  compositor.rs  debug_app.rs  helpers.rs  lib.rs
testing/integration/tests/: all.rs  applications.rs  apps.rs  graphics.rs  input.rs  integration.rs
(+564 files in other folders)
