[package]
name = "compositor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
smithay = { version = "0.7", default-features = false, features = ["wayland_frontend", "renderer_gl", "desktop", "xwayland"] }
jni = "0.21"
ndk = { version = "0.9", features = ["api-level-29"] }
ndk-sys = "0.6"
libloading = "0.8"
log = "0.4"
android_logger = "0.14"
rustix = { version = "0.38", features = ["net"] }
wayland-scanner = "0.31"
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["server"] }
# default-features=false drops gettext-rs (its gettext-sys C build wants
# `x86_64-linux-android-clang` from cc-rs which the NDK doesn't ship under
# that name). We'd only get translated `Name=`/`Comment=` for Ubuntu's
# `X-Ubuntu-Gettext-Domain` hint anyway — the raw locale fallback the
# crate already does covers the common case.
freedesktop-desktop-entry = { version = "0.8", default-features = false }
serde_json = "1"

[build-dependencies]
cc = "1.0"

# Pin smithay to our patched fork. The checkout lives at deps/smithay/,
# auto-cloned by scripts/lib/deps.sh — gradle's setupSmithay task does it
# automatically, or run `bash scripts/update-deps.sh smithay` standalone.
# The actual repo + commit pin lives in deps/deps.list.
[patch.crates-io]
smithay = { path = "../deps/smithay" }
